# fifa-26

./: .gitignore  FIFA Men's World Cup 2026 Sortable Schedule.xlsx  PRODUCT_SPEC.md  README.md  crawler.py  pyproject.toml  reproduce_issue.py  test_amadeus_location.py  test_hotel_search.py
backend/: create_user_favorites.sql  debug_concierge.py  debug_hotel_counts.py  debug_hotel_diversity.py  hotels.db
backend/app/: main.py
backend/app/agents/: graph.py  nodes.py  state.py
backend/app/agents/prompts/: system.py
backend/app/agents/tools/: flight_search.py  hotel_search.py  match_search.py  visa_checker.py
backend/app/api/: auth.py  routes.py
backend/app/db/: __init__.py  client.py  repository.py  schemas.py  vectors.py
backend/app/seeds/: ingest_h2h.py
backend/scripts/: populate_hotels_db.py
backend/seeds/: seed_matches.py
backend/tests/: test_currency.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AuthModal.tsx  ChatSidebar.tsx  FavoritesSidebar.tsx  FlightSearchPanel.tsx  HotelSearchForm.tsx  LeftSidebar.tsx  MainLayout.tsx  MatchDetailsModal.tsx  TeamPicker.tsx  TimeZoneSelector.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/data/: airlines.ts  flags.ts  matches.ts
frontend/src/hooks/: useFavorites.ts  useTimeZone.ts
frontend/src/lib/: dateUtils.ts
frontend/src/pages/: Matches.tsx
frontend/src/types/: match.ts  team.ts
